[package]
name = "kotync"
version = "0.1.0"
edition = "2021"
# also update in Dockerfile and .github/workflows
rust-version = "1.78"

[features]
default = ["new"]
new = ["sqlite"]
# behave like original sync server
original = ["migrate-md5", "mysql"]
migrate-md5 = ["dep:md-5"]
sqlite = ["diesel/sqlite", "diesel_migrations/sqlite"]
mysql = ["diesel/mysql", "diesel_migrations/mysql"]

[dependencies]
anyhow = "1.0.82"
blake3 = "1.5.1"
confique = { version = "0.2.5", default-features = false, features = ["toml"] }
diesel = { version = "2.2", features = ["r2d2"] }
diesel_migrations = "2.2"
dotenvy = "0.15.7"
jsonwebtoken = "9.3.0"
log = { version = "0.4.21", features = ["kv"] }
md-5 = { version = "0.10.6", optional = true }
rocket = { version = "0.5.0", features = ["json"] }
serde = { version = "1.0.199", features = ["derive"] }
simplelog = "0.12.2"
thiserror = "1.0.59"
unicode-segmentation = "1.11.0"

# bundle sqlite for diesel https://github.com/diesel-rs/diesel/issues/1860
# libsqlite3-sys = { version = "*", optional = true, features = ["bundled"] }

[dev-dependencies]
similar-asserts = "1.5.0"
