[package]
name = "kotync"
# also update in changelog
version = "0.2.0"
edition = "2021"
# also update in Dockerfile and .github/workflows
rust-version = "1.86"

[features]
default = ["new"]
new = ["sqlite"]
# behave like original sync server
original = ["migrate-md5", "mysql"]
migrate-md5 = ["dep:md-5"]
sqlite = ["diesel/sqlite", "diesel_migrations/sqlite"]
mysql = ["diesel/mysql", "diesel_migrations/mysql"]

# bundle sqlite for diesel https://github.com/diesel-rs/diesel/issues/1860
sqlite-bundled = ["dep:libsqlite3-sys", "libsqlite3-sys/bundled"]

[dependencies]
anyhow = "1.0.100"
blake3 = "1.8.2"
confique = { version = "0.3.1", default-features = false, features = ["toml"] }
diesel = { version = "2.3.2", features = ["r2d2"] }
diesel_migrations = "2.3"
dotenvy = "0.15.7"
jsonwebtoken = "9.3.1"
libsqlite3-sys = { version = "*", optional = true }
log = { version = "0.4.28", features = ["kv"] }
md-5 = { version = "0.10.6", optional = true }
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.227", features = ["derive"] }
simplelog = "0.12.2"
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0.16"
unicode-segmentation = "1.12.0"


[dev-dependencies]
similar-asserts = "1.7.0"
